リセットボタン

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <p id="target">Click to start!</p>
+  <button id="target">Click to start!</button>
   <p id="result"></p>
-
+  <button id="reset"></button>
   <script src="js/main.js"></script>
 </body>
 </html>
