--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+  <header class="header">
+  </header>
   <button id="target">Click to start!</button>
   <p id="result"></p>
   <button id="reset"></button>
