難易度設定、制限時間設定(2回目は出来ません)

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   </header>
   <button id="target">Click to start!</button>
   <p id="result"></p>
+  <div id = "remain-time"></div>
+  <button id="easyBtn">Easy</button>
+  <button id="normalBtn">Normal</button>
+  <button id="hardBtn">Hard</button>
   <button id="reset"></button>
   <script src="js/main.js"></script>
 </body>
