文字数表記を追加、CSSの変更

--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <header class="header">
-  </header>
-  <button id="target">Click to start!</button>
+  <!-- <header class="header">
+  </header> -->
+  <p id="target">Click to start!</p>
   <p id="result"></p>
   <div id = "remain-time"></div>
   <button id="easyBtn">Easy</button>
   <button id="normalBtn">Normal</button>
   <button id="hardBtn">Hard</button>
-  <button id="reset"></button>
+  <p><br></p>
+  <button id="reset" class = "btnR">Restart</button>
   <script src="js/main.js"></script>
 </body>
 </html>
