--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="utf-8">
   <title>Typing Game</title>
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Yuji+Boku&display=swap" rel="stylesheet">
 </head>
 <body>
   <!-- <header class="header">
@@ -16,6 +19,23 @@
   <button id="hardBtn">Hard</button>
   <p><br></p>
   <button id="reset" class = "btnR">Restart</button>
+  <script>
+    function getQueryParams() {
+      const params = {};
+      const queryString = window.location.search.slice(1);
+      const pairs = queryString.split('&');
+      for (let pair of pairs) {
+          const [key, value] = pair.split('=');
+          params[key] = decodeURIComponent(value || '');
+      }
+      return params;
+  }
+
+  // クエリパラメータからユーザー名を取得して表示
+  const params = getQueryParams();
+  const userName = params['name'];
+  document.getElementById('user-name').textContent = userName ? `こんにちは、${userName}さん！` : 'ゲスト状態です。';
+  </script>
   <script src="js/main.js"></script>
 </body>
 </html>
