--- a/login.html
+++ b/login.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ろぐいん</title>
-    <style>body{background-color: aqua;}</style>
+    <!-- <style>body{background-color: aqua;}</style> -->
+    <link rel="stylesheet" href="css/login.css">
     
 </head>
 <body>
@@ -27,10 +28,9 @@
                 alert("あ、あの、お名前を教えてください");
                 return;
             }
-           window.location.href = 'index.html';
+            window.location.href = 'index.html?name='+ encodeURIComponent('inpass');
  };
 document.getElementById("sendbtn").addEventListener("click",() => onClickTouroku());
-  
     </script>
 </body>
 </html>
